cmake_minimum_required(VERSION 3.15)
project(Lab5)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab5 Insect.cpp Insect.h Ant.cpp Ant.h Bee.cpp Bee.h driver.cpp Game.cpp Game.h Harvester.cpp Harvester.h Thrower.cpp Thrower.h Fire.cpp Fire.h Long_Thrower.cpp Long_Thrower.h Short_Thrower.cpp Short_Thrower.h Wall.cpp Wall.h Ninja.cpp Ninja.h Bodyguard.cpp Bodyguard.h Player.cpp Player.h)